--- a/senguo.cc/admin/templates/bbs/main.html
+++ b/senguo.cc/admin/templates/bbs/main.html
@@ -8,41 +8,14 @@
         <a href="javascript:;" url="/bbs/publish" class="publish-box" id="go_publish"></a>
         <div class="aside-box box-border mt10">
             <p class="aside-title"><span>热门文章</span></p>
-            <ul class="aside-list">
-                {% for topic in handler.getHotArticle()%}
-                <li data-id="{{topic['id']}}">
-                    <a href="/bbs/detail/{{topic['id']}}">
-                        <p class="clip c333">{{topic['title']}}</p>
-                        <div class="wrap-topic-attr">
-                            <div class="fr">
-                                <span class="icon-topic viewr">{{topic['scan_num']}}</span>
-                            </div>
-                            <span>{{topic['nickname']}}</span>
-                        </div>
-                    </a>
-                </li>
-                {% end %}
+            <ul class="aside-list hot-artilce-list">
+              
             </ul>
         </div>
         <div class="aside-box box-border mt10">
             <p class="aside-title"><span>活跃用户</span></p>
-            <ul class="aside-list">
-                {% for user in handler.getHotCustomer()%}
-                <li>
-                    <dl class="dl">
-                        <dd>
-                            <img src="{{user['imgurl'] or '/static/images/person.png'}}" alt="用户头像"/>
-                        </dd>
-                        <dt>
-                            <p class="f14 c333 clip">{{user['nickname']}}</p>
-                            <p class="c999 f12 mt12">
-                                <span class="num-txt">发布:{{user['article_num']}}篇</span>
-                                <span>评论:{{user['comment_num']}}条</span>
-                            </p>
-                        </dt>
-                    </dl>
-                </li>
-                {% end %}
+            <ul class="aside-list hot-customer-list">
+              
             </ul>
         </div>
     </div>
