--- a/senguo.cc/admin/templates/superAdmin/count-amount.html
+++ b/senguo.cc/admin/templates/superAdmin/count-amount.html
@@ -13,7 +13,7 @@
                  <a href="javascript:;" class="next-item1 text-grey2"> > </a>
     </div>
     <div class="change-box mb55">　　
-        <ul id="sell_way_change" class="sell-change-list1 pull-left">
+        <ul id="amount_way_change" class="amount-change-list1 pull-left">
                     <li><a href="javascript:;" class="sort-date1 text-grey3">按天排</a></li>
                     <li><a href="javascript:;" class="sort-week1 text-grey3">按周排</a></li>
                     <li><a href="javascript:;" class="sort-month1 text-grey3">按月排</a></li>
