--- a/senguo.cc/admin/templates/admin/discount-main.html
+++ b/senguo.cc/admin/templates/admin/discount-main.html
@@ -23,10 +23,10 @@
     <div class="c999">限时折扣<span class="c333"> / 管理</span></div>
     <div class="subnav-box group mt20">
         <ul class="subnav chinav pull-left furit-type-discount">
-            <li class="txt-center active" data-id=0><a href="javascript:;">未开始</a></li>
-            <li class="txt-center" data-id=1><a href="javascript:;">进行中</a></li>
-            <li class="txt-center" data-id=2><a href="javascript:;">已结束</a></li>
-            <li class="txt-center" data-id=3><a href="javascript:;">已停用</a></li>
+            <li class="txt-center active" data-id=0><a href="javascript:;">未开始({{counts[0]}})</a></li>
+            <li class="txt-center" data-id=1><a href="javascript:;">进行中({{counts[1]}})</a></li>
+            <li class="txt-center" data-id=2><a href="javascript:;">已结束({{counts[2]}})</a></li>
+            <li class="txt-center" data-id=3><a href="javascript:;">已停用({{counts[3]}})</a></li>
         </ul>
         <div class="wrap-newbtn fr">
             <a href="javascript:;" class="newbtn add-btn mt6 mr10 cm_new_discout">+新建折扣</a>
