--- a/senguo.cc/admin/templates/seckill/seckill.html
+++ b/senguo.cc/admin/templates/seckill/seckill.html
@@ -59,8 +59,9 @@
             <dd>
                 <span class="tr-num">还剩<span class="store-num"></span>份</span>
                 <p class="c333 clip nm-name p0"></p>
+                <span class="src-txt seckill-src-txt"></span>
                 <p class="mt20 goods-price-row">
-                    <span class="price-bo">1元/kg</span>
+                    <span class="price-bo"></span>
                     <span class="price-tip">省<span class="price-dif"></span>元</span>
                 </p>
                 <span class="seckill-btns seckill-btn">抢!</span>
