--- a/senguo.cc/admin/static/css/market-home.css
+++ b/senguo.cc/admin/static/css/market-home.css
@@ -201,3 +201,4 @@
 .buylimit{display:inline-block;font-size: 12px;color: #72D6B3;width:66px;height: 16px;line-height: 14px;text-align: center;border-radius: 4px;margin-right: 4px;border: 1px solid #72D6B3;}
 .buylimit-box{margin-top:8px;min-height:24px;}
 .goods-list-item .buylimit{color:#fec306;border-color:#fec306;}
+.bg-price{position: absolute;top: -26px;left: 0;}
