fix javascript err

--- a/senguo.cc/admin/templates/m-admin/goods-batch.html
+++ b/senguo.cc/admin/templates/m-admin/goods-batch.html
@@ -34,7 +34,7 @@
 <div class="wrap-bm-btns" id="batch_group">
     <ul class="btns-list">
         <li>
-            <a href="javascritp:;" class="bm-btn batch-goods">批量管理</a>
+            <a href="javascript:;" class="bm-btn batch-goods">批量管理</a>
         </li>
     </ul>
 </div>
