--- a/senguo.cc/admin/static/bbs/css/reset.css
+++ b/senguo.cc/admin/static/bbs/css/reset.css
@@ -58,6 +58,7 @@ textarea{width: 100%;border: none;overflow: hidden;resize: none;}
 .f12{font-size: 12px !important;}
 .f14{font-size: 14px !important;}
 .f16{font-size: 16px !important;}
+.fb{font-weight: bold;}
 /*字体颜色*/
 .red-txt{color: #ff6666!important;}
 .green{color: #4be2d4!important;}
