--- a/senguo.cc/admin/static/css/admin-global.css
+++ b/senguo.cc/admin/static/css/admin-global.css
@@ -404,13 +404,22 @@ input{color:#333;text-indent:5px;}
 .picture-title li.active{color:#44b549;}
 .picture-list{clear:both;width:105%;}
 .picture-list li{float:left;margin:0 26px 15px 0;position:relative;}
+.picture-list .active .img-selected{display:block;}
 .picture-list li:hover{cursor:pointer;}
-.picture-list li:hover .img-selected{display:block;}
 .picture-list .img-selected{position: absolute;left: 0;top: 0;width:80px;height:80px;background-color: rgba(0,0,0,.5);color: #fff;text-align: center;line-height:80px;font-size: 12px;display: none;z-index:100;}
 .picture-list img{width:80px;height:80px;}
+.picture-title3{height:30px;line-height:30px;border-bottom:1px solid #ddd;padding-left:20px;}
+.choosed-list{clear:both;width:105%;padding:20px;}
+.choosed-list li{float:left;margin:0 26px 15px 0;position:relative;}
+.choosed-list .active .img-selected{display:block;}
+.choosed-list li:hover{cursor:pointer;}
+.choosed-list .img-selected{position: absolute;left: 0;top: 0;width:60px;height:60px;background-color: rgba(0,0,0,.5);color: #fff;text-align: center;line-height:80px;font-size: 12px;display: none;z-index:100;}
+.choosed-list img{width:60px;height:60px;}
 #upload-picture{border-radius:0px;padding:2px 10px;}
 .wrap-sty-box{position: absolute;background: #fff;border: 1px solid #ddd;width:650px;left: 50%;top: 50%;-webkit-transform:translate(-50%,-50%);z-index:990;}
 .wrap-sty{background-color: #fbfbfb;border-top:1px solid #ddd;padding: 10px 0;text-align: center;clear:both;}
 .wrap-sty>a{display:inline-block;width: 90px;text-align:center;color:#333;font-size:14px;height:28px;line-height: 28px;border-radius: 2px;border: 1px solid #e7e7eb;}
 .del-pic-img{position: absolute;z-index:999;right: -8px;top:-8px;width: 20px;height: 20px;background-color: rgba(0,0,0,.6);font-size: 14px;color: #fff;line-height: 18px;text-align: center;border-radius: 50%;}
 .del-pic-img:hover,.del-pic-img:visited,.del-pic-img:link{color: #fff;}
+.del-choose-img{position: absolute;z-index:999;right: -8px;top:-8px;width: 20px;height: 20px;background-color: rgba(0,0,0,.6);font-size: 14px;color: #fff;line-height: 18px;text-align: center;border-radius: 50%;}
+.del-choose-img:hover,.del-choose-img:visited,.del-choose-img:link{color: #fff;}
