--- a/senguo.cc/admin/templates/bbs/artical-detail.html
+++ b/senguo.cc/admin/templates/bbs/artical-detail.html
@@ -30,7 +30,7 @@
                 </span>
                 <span>{{article["time"]}}</span>
             </p>
-            <div class="detail-cont mt10">
+            <div class="detail-cont mt30 mb20">
                 {% raw article["article"] %}
             </div>
             <div class="wrap-share-box">
