--- a/senguo.cc/admin/templates/bbs/artical-detail.html
+++ b/senguo.cc/admin/templates/bbs/artical-detail.html
@@ -40,6 +40,9 @@
                     <span class="c999 shareto">分享到</span>
                     <a href="javascript:;" title="分享到微信" class="share-wx">
                         <div class="wrap-share-code group">
+                            <span class="cpt-o">
+                                <span class="cpt-i"></span>
+                            </span>
                             <img src="/static/images/sg.png" alt="logo" class="slogo"/>
                             <div class="code2-box fl" id="code2">
                             </div>
