--- a/senguo.cc/admin/templates/admin/shop-notice-set.html
+++ b/senguo.cc/admin/templates/admin/shop-notice-set.html
@@ -79,19 +79,38 @@
     </div>
     <div class="pop-win pop-picture-library">
         <div class="wrap-sty-box">
-             <ul class="picture-title wrap-sty">
-                <li class="active">图片库</li>
-                <li>系统默认图片</li>
+            <ul class="picture-title wrap-sty">
+                <li class="active show-upload-list">图片库</li>
+                <li class="show-default-list">系统默认图片</li>
             </ul>
             <div class="p15" id="upload-area">
                 <span class="pull-left">点击图片即选中</span>
                 <button id="upload-picture" class="btn bg-green text-white pull-right">本地上传</button>
             </div>
              <div class="picture-library">
-               <ul class="group picture-list upload-pic-list">
-                    <li class="img-bo">
+                <ul class="group picture-list upload-pic-list">
+                
+                </ul>
+                <ul class="group picture-list default-pic-list hide">
+                    <li class="picture-list-item">
+                        <a href="javascript:;" class="del-pic-img">x</a>
                         <div class="img-selected">已选</div>
-                        <img src="" alt="商品图片"/>
+                        <img src="/static/images/banner.png" url="/static/images/banner.png" alt="商品图片"/>
+                    </li>
+                    <li class="picture-list-item">
+                        <a href="javascript:;" class="del-pic-img">x</a>
+                        <div class="img-selected">已选</div>
+                        <img src="/static/images/holder_fruit.jpg"  url="/static/images/holder_fruit.jpg" alt="商品图片"/>
+                    </li>
+                     <li class="picture-list-item">
+                        <a href="javascript:;" class="del-pic-img">x</a>
+                        <div class="img-selected">已选</div>
+                        <img src="http://7rf3aw.com2.z0.glb.qiniucdn.com/o_19t7n14fh1c0s1g0hne1gu45jhp?imageView2/1/w/100/h/100" url="http://7rf3aw.com2.z0.glb.qiniucdn.com/o_19t7n14fh1c0s1g0hne1gu45jhp" alt="商品图片"/>
+                    </li>
+                     <li class="picture-list-item">
+                        <a href="javascript:;" class="del-pic-img">x</a>
+                        <div class="img-selected">已选</div>
+                        <img src="http://7rf3aw.com2.z0.glb.qiniucdn.com/o_19t7mvj70f7dn221sd1pfn18l2d?imageView2/1/w/100/h/100" url="http://7rf3aw.com2.z0.glb.qiniucdn.com/o_19t7mvj70f7dn221sd1pfn18l2d" alt="商品图片"/>
                     </li>
                 </ul>
                 <div class="picture-pagination list-pagination group pull-right mt0">
