--- a/senguo.cc/admin/static/css/official_product.css
+++ b/senguo.cc/admin/static/css/official_product.css
@@ -4,15 +4,6 @@ body{padding: 0}
 .w1024{width: 1070px;margin: 0 auto;overflow: hidden;position: relative;top: -500px;}
 .f16{font-size: 16px !important;}
 .s-roll{position: absolute;border-radius: 50%;-webkit-box-sizing:content-box;box-sizing:content-box;-ms-box-sizing:content-box;width: 240px;height: 240px;background-color: #d4d8d8;top: 50%;left: 50%;-webkit-transform:translate(-50%,-50%);transform:translate(-50%,-50%);-ms-transform:translate(-50%,-50%);border: 30px solid #e9ebe7;}
-
-.wrap-feature{padding: 50px 100px 0 100px;}
-.feature-list>li{width: 50%;float: left;}
-.feature-item{padding-left: 130px;padding-top:32px;margin-bottom: 40px;height: 134px;background-repeat: no-repeat;background-position: left top;}
-.feature-item>p{color: #999;font-size: 14px;width: 240px;}
-.feature-list .mul-shop{background-image: url('/static/official_img/icon5.png');}
-.feature-list .lbs{background-image: url('/static/official_img/icon6.png');}
-.feature-list .staff{background-image: url('/static/official_img/icon7.png');}
-.feature-list .stype{background-image: url('/static/official_img/icon8.png');}
 @-webkit-keyframes border{
     0%{border-width: 0px;}
     100%{border-width: 30px;}
@@ -47,10 +38,11 @@ body{padding: 0}
 .data-bg{width: 100%;background-color: #58d0a6;height: 446px;}
 .data-width{height: 446px;position: relative;overflow: visible;}
 .wrap-cimg{position: relative;top: 0;right:397px;height: 446px;width: 100%;overflow: hidden;}
-.wrap-data-text{position: absolute;left: calc(50% - 113px);top: 0;width: 613px;height: 446px;}
+.wrap-data-text{position: absolute;left: 50%;margin-right: 113px;top: 0;width: 613px;height: 446px;}
+.data-text-box{position: absolute;left: -113px;}
 .wrap-data-text .data-title{font-size: 44px;font-weight: bold;color: #fff;margin-left: 120px;margin-top: 50px;}
 .wrap-data-text .data-content{font-size: 20px;margin-top: 30px;margin-left: 120px;line-height: 24px;color: #fff;}
-.wrap-data-text>img{position: absolute;left: 0;bottom: 0;}
+.wrap-data-text>img{position: absolute;left: -113px;bottom: 0;}
 .login-bg{width: 100%;position: relative;height: 552px;}
 .login-bg >img{position: absolute;left: 0;width: 100%;height: 552px;}
 .login-width{height: 552px;margin: 0 auto;position: relative;}
@@ -59,14 +51,31 @@ body{padding: 0}
 .login-content{font-size: 20px;margin-top: 30px;line-height: 24px;}
 .wrap-paytype{position: relative;padding: 60px 0 40px 0;}
 .roll-box{position: absolute;z-index:5;top: 100px;left: 180px;width: 300px;height: 300px;}
-.roll-box>i{display: block;width: 121px;height: 121px;position: absolute;background-size: contain;}
-.roll-box .alipay{background-image: url('/static/official_img/alipay_logo.png');top: 100px;left: 540px;}
-.roll-box .wechat{background-image: url('/static/official_img/wechat_logo.png');top: 100px;left: 260px;}
-.roll-box .sina{background-image: url('/static/official_img/sina_logo.png');top: 100px;left: 680px;}
-.roll-box .qq{background-image: url('/static/official_img/qq_logo.png');top: 100px;left: 400px;}
+.roll-box>i{display: block;width: 121px;height: 121px;position: absolute;background-size: contain;top: 105px;}
+.roll-box .alipay{background: url('/static/official_img/alipay_logo.png') no-repeat;left: 540px;}
+.roll-box .wechat{background: url('/static/official_img/wechat_logo.png') no-repeat;top: 105px;left: 260px;}
+.roll-box .sina{background: url('/static/official_img/sina_logo.png') no-repeat;left: 680px;}
+.roll-box .qq{background: url('/static/official_img/qq_logo.png') no-repeat;left: 400px;}
 .phone-bg>img{position: absolute;top: -197px;right: 70px;}
-.marketing-bg{width: 100%;height: 547px;background:-webkit-gradient(linear, 0 0, 100% 100%, from(#58d0a6), to(#65cec5));FILTER: progid:DXImageTransform.Microsoft.Gradient(gradientType=1,startColorStr=#58d0a6,endColorStr=#65cec5);}
-.marketing-width{margin: 0 auto;height: 547px;}
-.marketing-box{position: relative;}
+.marketing-bg{width: 100%;height: 520px;background:-webkit-gradient(linear, 0 0, 100% 100%, from(#58d0a6), to(#65cec5));FILTER: progid:DXImageTransform.Microsoft.Gradient(gradientType=1,startColorStr=#58d0a6,endColorStr=#65cec5);}
+.marketing-width{margin: 0 auto;height: 520px;overflow: visible;}
+.marketing-box{position: relative;padding-top: 20px;}
+.marketing-box>img{position: absolute;top:305px;z-index: 3;width: 1137px;height: 397px;}
 .marketing-title{height: 80px;padding-top: 30px;font-size: 44px;font-weight: bold;text-align: center;color: #fff;}
 .marketing-content{font-size: 20px;color: #fff;text-align: center;}
+.market-icons{position:relative;top:0;width: 100%;height: 100%;}
+.market-icons>i{display: block;width: 121px;height: 121px;position: absolute;z-index: 4}
+.market-icons .market-one{top:240px;left:105px;background:url('/static/official_img/market_1.png') no-repeat;}
+.market-icons .market-two{top:55px;left:305px;background:url('/static/official_img/market_2.png') no-repeat;}
+.market-icons .market-three{top:220px;left:425px;background:url('/static/official_img/market_3.png') no-repeat;}
+.market-icons .market-four{top:155px;left:560px;background:url('/static/official_img/market_4.png') no-repeat;}
+.market-icons .market-five{top:250px;left:660px;background:url('/static/official_img/market_5.png') no-repeat;}
+.market-icons .market-six{top:180px;left:770px;background:url('/static/official_img/market_6.png') no-repeat;}
+.store-bg{position: relative;max-height: 692px;min-height: 600px;}
+.store-bg>img{width: 100%;max-height: 692px;min-height: 600px;}
+.wrap-feature{position: absolute;top:160px;width: 1000px;height: 364px;}
+.feature-list>li{width: 50%;float: left;}
+.feature-item>img{float: left;margin-right: 30px;}
+.feature-item{padding-left: 60px;padding-top:32px;margin-bottom: 40px;height: 134px;background-repeat: no-repeat;background-position: left top;}
+.store-title{font-size: 28px;font-weight: bold;color: #fff;margin-bottom: 10px;margin-top: 30px;}
+.feature-item .store-content{font-size: 18px;color: #fff;line-height: 24px;}
