--- a/senguo.cc/admin/templates/official/product.html
+++ b/senguo.cc/admin/templates/official/product.html
@@ -35,8 +35,10 @@
                 <img src="{{static_url('official_img/data-left.png')}}" alt="森果全方位数据统计"/>
             </div>
             <div class="wrap-data-text">
-                <p class="data-title">全方位数据统计</p>
-                <p class="data-content">库存、销量、用户、订单、营业额全部帮你细致分析</p>
+                <div class="data-text-box">
+                    <p class="data-title">全方位数据统计</p>
+                    <p class="data-content">库存、销量、用户、订单、营业额全部帮你细致分析</p>
+                </div>
                 <img src="{{static_url('official_img/data-line.png')}}" />
             </div>
          </div>
@@ -67,54 +69,58 @@
             <div class="marketing-box">
                 <p class="marketing-title">多种营销和玩法</p>
                 <p class="marketing-content">告白墙、签到、代金券、团购、秒杀、大转盘应有尽有</p>
-                <img src="{{static_url('official_img/data-left.png')}}" alt="森果登录页"/>
+                <img src="{{static_url('official_img/marketing-low-bg.png')}}" alt="森果登录页"/>
+            </div>
+            <div class="market-icons">
+                <i class="market-one"></i>
+                <i class="market-two"></i>
+                <i class="market-three"></i>
+                <i class="market-four"></i>
+                <i class="market-five"></i>
+                <i class="market-six"></i>
             </div>
         </div>
     </div>
-   
-     <div class="w1000">
-         <div class="wrap-feature">
-            <ul class="feature-list group">
-                <li>
-                    <div class="feature-item mul-shop">
-                        <p class="f16">多店铺管理</p>
-                        <p class="mt15">不同店铺之间自由切换</p>
-                    </div>
-                </li>
-                <li>
-                    <div class="feature-item lbs">
-                        <p class="f16">lbs地理位置定位</p>
-                        <p class="mt15">店铺位置与配送区域接入地图功能，直观的门店导航 </p>
-                    </div>
-                </li>
-                <li>
-                    <div class="feature-item staff">
-                        <p class="f16">实用的员工系统</p>
-                        <p class="mt15">分配订单、处理订单，工资结算等提供店铺运作效率</p>
-                    </div>
-                </li>
-                <li>
-                    <div class="feature-item stype">
-                        <p class="f16">支持多重经营模式</p>
-                        <p class="mt15">到店自提、按时达、立即送、周期购、预售自由选择</p>
-                    </div>
-                </li>
-            </ul>
-        </div>
-     </div>
+    <div class="store-bg">
+        <img src="{{static_url('official_img/store-bg.png')}}" />
+        <div class="w1000 store-width">
+            <div class="wrap-feature">
+                <ul class="feature-list group">
+                    <li>
+                        <div class="feature-item mul-shop">
+                            <img src="{{static_url('official_img/stores.png')}}">
+                            <p class="store-title">多店铺管理</p>
+                            <p class="store-content">不同店铺之间自由切换</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="feature-item lbs">
+                            <img src="{{static_url('official_img/lbs.png')}}">
+                            <p class="store-title">lbs地理位置定位</p>
+                            <p class="store-content">店铺位置与配送区域接入地图<br />功能，直观的门店导航 </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="feature-item staff">
+                            <img src="{{static_url('official_img/members.png')}}">
+                            <p class="store-title">实用的员工系统</p>
+                            <p class="store-content">分配订单、处理订单，工资结算<br />等提供店铺运作效率</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="feature-item stype">
+                            <img src="{{static_url('official_img/management.png')}}">
+                            <p class="store-title">支持多重经营模式</p>
+                            <p class="store-content">到店自提、按时达、立即送、<br />周期购、预售自由选择</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>  
+    </div>
+    
 </div>
 {% end %}
 {% block bottom-js%}
 <script src="{{static_url('js/official_product.js')}}"></script>
 {% end %}
-<!-- <div class="slide-box">
-            <div class="phonebg"></div>
-            <ul class="slide-list group" id="slide-list">
-                <li class="s1 anima"><img src="/static/official_img/shot_1.jpg" alt=""/></li>
-                <li class="s1 anima"><img src="/static/official_img/shot_2.jpg" alt=""/></li>
-                <li class="s1 anima"><img src="/static/official_img/shot_3.jpg" alt=""/></li>
-                <li class="s2 anima"><img src="/static/official_img/shot_1.jpg" alt=""/></li>
-                <li class="s2 anima"><img src="/static/official_img/shot_2.jpg" alt=""/></li>
-                <li class="s2 anima"><img src="/static/official_img/shot_3.jpg" alt=""/></li>
-            </ul>
-        </div> -->
