--- a/senguo.cc/admin/templates/mbbs/search.html
+++ b/senguo.cc/admin/templates/mbbs/search.html
@@ -7,7 +7,7 @@
     <a href="javascript:;" class="back goback">返回</a>
     <div class="wrap-order-tab">
         <ul class="group order-type-list">
-            <div class="wrap-ipt"><input type="text" class="search-ipt" placeholder="请输入文章标题关键字" id="search-ipt"/></div>
+            <div class="wrap-ipt"><input type="text" class="search-ipt" placeholder="请输入文章标题关键字搜索" id="search-ipt"/></div>
         </ul>
     </div>
     <a href="javascript:;" class="head-right search" id="search-article"><em></em></a>
@@ -18,7 +18,7 @@
     <ul class="atical-list">
 
     </ul>
-    <p class="loading mt30 c999 txt-center" style="display:none;">没有搜索到任何数据！</p>
+    <p class="loading mt30 c999 txt-center" style="display:none;">没有搜索到符合条件的文章</p>
 </div>
 {% end %}
 {% block bottom %}
