--- a/senguo.cc/admin/static/bbs/css/reset.css
+++ b/senguo.cc/admin/static/bbs/css/reset.css
@@ -91,6 +91,7 @@ textarea{width: 100%;border: none;overflow: hidden;resize: none;}
 .mt30{margin-top: 30px;}
 .ml10{margin-left: 10px;}
 .ml5{margin-left: 5px;}
+.mr5{margin-right: 5px;}
 .mr10{margin-right: 10px;}
 .mt-100{margin-top: -100px;}
 .mb20{margin-bottom: 20px;}
@@ -105,7 +106,7 @@ textarea{width: 100%;border: none;overflow: hidden;resize: none;}
 .container{position: relative;z-index: 1;padding-top: 40px;padding-bottom: 80px;width: 100%;max-width:800px;min-width:320px;margin: 0 auto;}
 /*弹出框底层*/
 .pop-win{width: 100%;height: 100%;position: fixed;background-color: rgba(255,255,255,.4);top: 0;left: 0;z-index:9999;}
-.pop-content{width:80%;max-width:400px;padding:15px;background-color: #fff;border: 1px solid #eee;box-shadow: 1px 2px 4px 0 #ccc;position: absolute;left: 50%;top: 40%;-webkit-transform:translate(-50%,-50%);}
+.pop-content{width:80%;max-width:400px;padding:15px;background-color: #fff;border: 1px solid #eee;box-shadow: 0 0 40px 0px rgba(0,0,0,0.25);position: absolute;left: 50%;top: 40%;-webkit-transform:translate(-50%,-50%);}
 .pop-content textarea{background:#f5f5f5;height:80px;padding:8px 0;text-indent:8px;margin-bottom:10px;}
 .pop-content .button-box{text-align: center;}
 .pop-content .button-box button{background:#48b6a4;color:#fff;border-radius:20px;width:35%;height:30px;}
