--- a/senguo.cc/admin/templates/bbs/base.html
+++ b/senguo.cc/admin/templates/bbs/base.html
@@ -56,7 +56,7 @@
                 </div>
                 <a href="/bbs" class="logo-sg"></a>
                 <div class="wrap-search">
-                    <input type="text" class="search-input" id="search_bbs" placeholder="请输入文章标题关键字"/>
+                    <input type="text" class="search-input" id="search_bbs" placeholder="请输入文章标题关键字搜索"/>
                     <a href="javascript:;" class="search-btn" id="search_btn"></a>
                 </div>
             </div>
