--- a/senguo.cc/admin/templates/bbs/profile.html
+++ b/senguo.cc/admin/templates/bbs/profile.html
@@ -36,8 +36,8 @@
                 <a href="javascript:;" class="topic-opt edit_topic">编辑</a>
                 <a href="javascript:;" class="topic-opt del_topic">删除</a>
             </div>
-            <span class="topic-class"></span>
-            <span class="topic-tm f14"></span>
+            <span class="topic-class mr5"></span>
+             • <span class="topic-tm f14 ml5 mr5"></span>
         </div>
     </li>
 </ul>
