--- a/senguo.cc/admin/templates/bbs/search.html
+++ b/senguo.cc/admin/templates/bbs/search.html
@@ -18,7 +18,7 @@
     <ul class="atical-list">
 
     </ul>
-    <p class="loading mt30 c999 txt-center" style="display:none;">没有搜索到任何数据！</p>
+    <p class="loading mt30 c999 txt-center" style="display:none;">没有搜索到符合条件的文章</p>
 </div>
 {% end %}
 {% block bottom %}
